# insert_benchmark

./: .consumer.env  .dockerignore  .gitignore  .producer.env  Cargo.toml  README.md  consumer_1.csv  consumer_2.csv  consumer_3.csv  docker-compose.yml  dockerfile  event.json  start.sh  start_services.sh
src/: event.rs  main.rs
