[package]
name = "insert_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
mysql = "22.2.0"
serde = "1.0.144"
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
